cititechdNew2024Jan/force-app/main/default/objects/Invoice__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If invoice is credited (to cancel out another invoice) please check</inlineHelpText>
    <label>Credit</label>
    <type>Checkbox</type>
</CustomField>