cititechdNew2024Jan/force-app/main/default/objects/Invoice__c/fields/Netsuite_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Payment_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Netsuite Payment Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>