cititechdNew2024Jan/force-app/main/default/objects/Invoice__c/fields/SFDC_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Order_ID__c</fullName>
    <formula>Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used as a lookup on payments/invoicing</inlineHelpText>
    <label>SFDC Order ID</label>
    <type>Text</type>
</CustomField>