cititechdNew2024Jan/force-app/main/default/objects/Invoice__c/listViews/All_Invoices1.listView-meta.xml
<ListView>
    <fullName>All_Invoices1</fullName>
    <columns>Account__c</columns>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Date_Invoice_Sent__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>